examples/test/testpolicy11294.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11294
  namespace: namespace174
spec:
  podSelector:
    matchLabels:
      key28: value29
      key19: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value20
      podSelector:
        matchLabels:
          key16: value25
          key18: value30
